--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-loading-spin": "^2.1.9",
     "react-moment": "^1.1.2",
     "react-paginate": "^8.1.3",
+    "react-share": "^4.4.0",
     "react-syntax-highlighter": "^15.5.0",
     "remove": "^0.1.5"
   },
