--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "moment": "^2.29.3",
     "next": "^12.2.0",
     "next-transpile-modules": "^9.0.0",
+    "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
