--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-share": "^4.4.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-youtube": "^10.0.0",
-    "remove": "^0.1.5"
+    "remove": "^0.1.5",
+    "sitemap": "^7.1.1"
   },
   "devDependencies": {
     "eslint": "8.18.0",
