--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "next": "^12.2.4",
     "next-transpile-modules": "^9.0.0",
     "nodemailer": "^6.7.7",
+    "ol": "^7.1.0",
     "react": "^18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
-    "react-loading-spin": "^2.1.9",
     "react-moment": "^1.1.2",
     "react-paginate": "^8.1.3",
     "react-share": "^4.4.0",
