--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-share": "^4.4.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-youtube": "^10.0.0",
+    "sass": "^1.56.1",
     "sitemap": "^7.1.1"
   },
   "devDependencies": {
