--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^12.2.4",
     "next-transpile-modules": "^9.0.0",
     "nodemailer": "^6.7.7",
+    "nprogress": "^0.2.0",
     "ol": "^7.1.0",
     "react": "^18.2.0",
     "react-calendar": "^3.9.0",
