--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "get-youtube-id": "^1.0.1",
     "groq": "^2.29.3",
     "moment": "^2.29.3",
-    "next": "^12.2.4",
+    "next": "^13.0.6",
     "next-transpile-modules": "^9.0.0",
     "nodemailer": "^6.7.7",
     "nprogress": "^0.2.0",
@@ -38,6 +38,6 @@
   },
   "devDependencies": {
     "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0"
+    "eslint-config-next": "^13.0.6"
   }
 }
