--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sitemap": "^7.1.1"
   },
   "devDependencies": {
+    "@types/react": "18.0.26",
     "eslint": "8.18.0",
     "eslint-config-next": "^13.0.6"
   }
