--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/react": "18.0.26",
     "eslint": "8.18.0",
-    "eslint-config-next": "^13.0.6"
+    "eslint-config-next": "^13.0.6",
+    "typescript": "^4.9.4"
   }
 }
