--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.3.2",
     "@sanity/image-url": "^1.0.1",
+    "ably": "^1.2.5-beta.1",
+    "crisp-sdk-web": "^1.0.13",
     "framer-motion": "^6.3.16",
     "get-youtube-id": "^1.0.1",
     "groq": "^2.29.3",
