--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/code-input": "^4.1.0",
     "@sanity/image-url": "^1.0.1",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.2",
     "ably": "^1.2.5-beta.1",
     "crisp-sdk-web": "^1.0.13",
     "framer-motion": "^6.3.16",
