--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
   },
   "devDependencies": {
     "@types/react": "18.0.26",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.18.0",
     "eslint-config-next": "^13.4.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.9.4"
   }
 }
